# QMolAssist

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
backend/: llm_copilot.py  molecule_selector.py  pyscf_comparator.py
examples/: example_comparator.py  example_llm_protocol.py  example_selector.py
qmolassist/: __main__.py  llm_copilot.py  molecule_selector.py  pyscf_comparator.py  qprompt.py  vqe_explorer.py
tests/: test_llm_copilot.py  test_molecule_selector.py  test_pyscf_comparator.py  test_qprompt.py  test_vqe_explorer.py
