[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qmolassist"
version = "0.1.0"
description = "A quantum-classical chemistry copilot"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "qiskit>=1.0",
    "qiskit-nature>=0.7",
    "pyscf>=2.3",
    "rdkit",            
]

[project.optional-dependencies]
test = [
    "pytest",
    "pandas>=2.1"  
]

[project.scripts]
qmolassist = "qmolassist.__main__:run"

[tool.setuptools.packages.find]
where = ["qmolassist"]         
exclude = ["tests*"]